--- a/sass/blocks/_all.sass
+++ b/sass/blocks/_all.sass
@@ -159,6 +159,7 @@
       padding: 20px
       padding-bottom: 22px
     @media   ( max-width: 418px )
+      border-radius: 12px
       max-height: 320px
       min-height: 320px
     &::before
@@ -293,6 +294,8 @@
     height: 100%
     @media   ( max-width: 600px )
       width: 100%
+    @media screen and ( max-width: 412px )
+      border-radius: 12px
     @media   ( max-width: 320px )
       padding: 0 20px 22px
     &::before
