--- a/sass/blocks/_popular.sass
+++ b/sass/blocks/_popular.sass
@@ -163,6 +163,7 @@
       padding: 20px
       padding-bottom: 22px
     @media   ( max-width: 418px )
+      border-radius: 12px
       max-height: 320px
       min-height: 320px
     &::before
