--- a/sass/blocks/_recent.sass
+++ b/sass/blocks/_recent.sass
@@ -133,6 +133,7 @@
     overflow: hidden
     height: 100%
     @media   ( max-width: 600px )
+      border-radius: 12px
       width: 100%
     @media   ( max-width: 320px )
       padding: 0 20px 22px
